updated html & css

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
                 <div class="form-group form-check">
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
                   <label class="form-check-label" for="exampleCheck1">Remember me</label>
+                  </br>
                   <a href="">Register now</a>
                 </div>
-                <button type="submit" class="btn btn-primary">Log in</button>
-                <small id="emailHelp" class="form-text text-muted">Forgot your password?</small>
+                <button type="submit" class="login btn btn-primary">Log in</button>
+                <small id="forgotpassword" class=" form-text text-muted">Forgot your password?</small>
               </form>
               <hr/>
               <div class="col">
