--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 </div>
                 <div class="form-group form-check">
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                  <label class="form-check-label" for="exampleCheck1">Remember me</label>
+                  <label class="form-check-label" for="exampleCheck1" id="rememberme">Remember me</label>
                   </br>
-                  <a href="">Register now</a>
+                  <a href="" id="reginsternow">Register now</a>
                 </div>
                 <button type="submit" class="login btn btn-primary">Log in</button>
                 <small id="forgotpassword" class=" form-text text-muted">Forgot your password?</small>
